optimize SSE fix datatable wraping

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -12,3 +12,8 @@
     color: #EEE;
     z-index: 1000;
 }
+table.dataTable tbody td.wrap {
+    word-wrap: break-word; 
+    word-break: break-all; 
+    white-space: normal;
+}
